[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "net-tracker"
version = "0.1"

[tool.setuptools.packages]
find = { }

[tool.setuptools.package-data]
nettrackercore = ['locales/*.*', 'locales/e*/LC_MESSAGES/*.*']

[project.scripts]
net-tracker = "nettrackercore.__main__:main"
