[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "net-tracker"
version = "0.1"
dependencies = [
    "mongoengine",
    "rich",
    "xmltodict",
    "Flask",
    "flask-mongoengine-3",
    "build",
    "setuptools",
    "Babel",
    "sphinx",
    "sphinx-intl",
    "sphinx-book-theme",
]

[tool.setuptools.packages]
find = { }

[tool.setuptools.package-data]
nettrackercore = ['locales/*.*', 'locales/e*/LC_MESSAGES/*.*']

[project.scripts]
net-tracker = "nettrackercore.__main__:main"
